tests/paczka1/fuzzy1/86991590.err
Error in line 1: LN50 A652 47,0
Error in line 4: AsYGC A546 40,8
Error in line 13: Kh007 S895 56,4
Error in line 18: plwMnwT S182 99,6
Error in line 7: AsYGC A652 24,5
Error in line 22: Kh007 A546 58,2
Error in line 33: plwMnwT S895 26,9
Error in line 32: AsYGC S895 47,8
Error in line 35: plwMnwT A546 41,4
